fixed button alignment

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -8,10 +8,10 @@
     /* display: flex; */
     /* flex-direction: column; */
     display: grid;
-    grid-template: 3.1fr 1fr / 1fr;
+    /* grid-template: 3.1fr 1fr / 1fr; */
     /* grid-template: 3em 1em / 1fr; */
     font-family: Concert One,cursive;
-    justify-content: center;
+    /* justify-content: center; */
     min-height: 220px;
     padding: 1em;
     margin: 1em;
@@ -19,7 +19,7 @@
     width: 200px;
     background-repeat: no-repeat;
     color: black;
-    text-align: center;
+    /* text-align: right; */
     align-content: space-between;
 }
 
@@ -47,9 +47,11 @@
   
 
   .card-buttons {
-    grid-row: 2;
+    grid-row: 3;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    /* grid-template-columns: repeat(4, 1fr); */
+    /* grid-template-columns: 2fr 1fr 1fr 1fr; */
+    grid-template-columns: 1fr 1fr 1fr;
     /* text-align: bottom; */
     /* vertical-align: text-bottom; */
     
@@ -58,3 +60,13 @@
   p {
     font-weight: lighter;
   }
+
+  /* .card-item__message {
+    /* color: green; */
+    /* width: auto; */
+    /* max-width: 70%; */
+    /* min-width: 70%; */
+    /* text-align: right; */
+    /* align-content: center; */
+    /* vertical-align: bottom; */
+  /* } */
